Fix right column showing on mobile

--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -1209,6 +1209,10 @@ $ui-header-height: 55px;
   .right_column .explore__suggested-header {
     display: none;
   }
+
+  .right_column__home {
+    display: none;
+  }
 }
 
 h1#Misc {
